other/a/add-tolerations/.kyverno-test/patched01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: addpod01
spec:
  containers:
  - image: containerimage01
    name: container01
  tolerations:
  - effect: NoSchedule
    key: org.com/role
    operator: Equal
    value: service
